<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Quiz 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/soal_quiz_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <RadioGroup
        android:id="@+id/rgJawaban"
        android:layout_width="327dp"
        android:layout_height="128dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19">

        <RadioButton
            android:id="@+id/rbJawaban1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jawaban1_quiz_1" />

        <RadioButton
            android:id="@+id/rbJawaban2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jawaban2_quiz_1" />

        <RadioButton
            android:id="@+id/rbJawaban3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jawaban3_quiz_1" />

        <RadioButton
            android:id="@+id/rbJawaban4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jawaban4_quiz_1" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>